--- a/eyes-tw-debug.yml
+++ b/eyes-tw-debug.yml
@@ -66,7 +66,7 @@ mybatis:
 
 es:
   clusterName: sp_single_179
-  clientIp: http://192.168.1.179
+  clientIp: 192.168.1.179
   pingTimeout: 120
   samplerInterval: 120
 neo4j:
